configed for docker and kubernetes